--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [
 dependencies = [
   "gitpython>=3.1.0,<4.0.0",
   "httpx>=0.23.0,<1.0.0",
-  "boto3>=1.26.0,<2.0.0",
+  "aioboto3",
   "pydantic>=2.0.0",
   "psycopg2-binary>=2.9.0",
   "lupa==2.2.0",
