--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,4 +26,4 @@ jobs:
 
       - name: Run mypy
         run: |
-          hatch run mypy --install-types --non-interactive asimov
+          hatch run types:check
