--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ python = ["312"]
 [tool.hatch.envs.hatch-test]
 extra-dependencies = [
   "pytest-asyncio",
+  "pytest-timeout",
 ]
 
 [tool.hatch.envs.types]
@@ -89,3 +90,7 @@ exclude = [
   "/docs",
   "/tests",
 ]
+
+[tool.pytest.ini_options]
+timeout = 10
+timeout_method = "thread"
