--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ dev = [
   "mypy>=1.0.0",
   "pytest>=7.0.0",
   "pytest-cov>=4.0.0",
-  "pytest-asyncio",
+  "pytest-asyncio>=0.24.0",
 ]
 
 [project.urls]
@@ -55,8 +55,8 @@ python = ["312"]
 
 [tool.hatch.envs.hatch-test]
 extra-dependencies = [
-  "pytest-asyncio",
-  "pytest-timeout",
+  "pytest-asyncio>=0.24.0",
+  "pytest-timeout>=2.0.0",
 ]
 
 [tool.hatch.envs.types]
