--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,12 +23,15 @@ classifiers = [
 dependencies = [
   "gitpython>=3.1.0,<4.0.0",
   "httpx>=0.23.0,<1.0.0",
-  "aioboto3",
+  "opentelemetry-instrumentation-httpx",
+  "aioboto3>=13.0.0",
   "pydantic>=2.0.0",
   "psycopg2-binary>=2.9.0",
+  "opentelemetry-instrumentation-psycopg2",
   "lupa==2.2.0",
   "jsonpickle>=3.0.0",
   "redis>=5.0.0",
+  "opentelemetry-api>=1.27.0",
 ]
 
 [project.optional-dependencies]
