--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
   "jsonpickle>=3.0.0",
   "redis>=5.0.0",
   "opentelemetry-api>=1.27.0",
+  "google-cloud-aiplatform==1.69.0",
 ]
 
 [project.optional-dependencies]
