--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
   "redis>=5.0.0",
   "opentelemetry-api>=1.27.0",
   "google-cloud-aiplatform==1.69.0",
+  "backoff>=2.2.0",
 ]
 
 [project.optional-dependencies]
