add google gemini client

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
   "opentelemetry-api>=1.27.0",
   "google-cloud-aiplatform==1.69.0",
   "backoff>=2.2.0",
+  "google-generativeai==0.8.3"
 ]
 
 [project.optional-dependencies]
