--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,8 @@ dependencies = [
   "opentelemetry-api>=1.27.0",
   "google-cloud-aiplatform==1.69.0",
   "backoff>=2.2.0",
-  "google-generativeai==0.8.3"
+  "google-generativeai==0.8.3",
+  "google-genai",
 ]
 
 [project.optional-dependencies]
